# ccp-clientlibrary-go

./: .gitignore  BUILD.bazel  Makefile  WORKSPACE  go.mod  go.sum
ccp/: BUILD.bazel  client.go
cmd/ccpctl/: BUILD.bazel  ccpctl.go
cmd/ccpctl/create/: BUILD.bazel  create.go
cmd/ccpctl/delete/: BUILD.bazel  delete.go
cmd/ccpctl/version/: BUILD.bazel  version.go
common/proto/v2/: BUILD.bazel  ccp.proto
common/proto/v3/: BUILD.bazel  ccp.proto
examples/createccpcluster/: BUILD.bazel  main.go
pkg/create/: BUILD.bazel  create.go
pkg/delete/: BUILD.bazel  delete.go
pkg/vsphere/: BUILD.bazel  create.go  createconfig.go
scripts/: generate_protos.sh
