load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["ccpctl.go"],
    importpath = "github.com/swiftdiaries/ccp-clientlibrary-go/v3/cmd/ccpctl",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/ccpctl/version:go_default_library",
        "//vendor/github.com/sirupsen/logrus:go_default_library",
        "//vendor/github.com/spf13/cobra:go_default_library",
    ],
)

go_binary(
    name = "ccpctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
